src/objects/Computer_Inventory_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ComputerInventoryID__c</fullName>
        <label>Computer Inventory</label>
        <referenceTo>Computer_Inventory__c</referenceTo>
        <relationshipLabel>Computer Inventory Line Items</relationshipLabel>
        <relationshipName>Computer_Inventory_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Computer Inventory Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Computer Inventory Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Computer Inventory Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>